Try to fix overlapping layout in firefox 7.0.1

--- a/source/css/default.css
+++ b/source/css/default.css
@@ -17,7 +17,7 @@ input {
 }
 
 input.file {
-    width: 350px;
+    width: 450px;
 }
 
 textarea {
